[package]
name = "lucy"
version = "0.1.0"
edition = "2021"
description = """
Lucy is a command execution and task automation service.
"""
repository = "https://github.com/dark-fusion/lucy"
license = "MIT"
# Default is "2" if root package specifies edition = "2021" (or newer)
#resolver = "2"

#[lib]
#path = "src/lib.rs"
#doctest = false # Remove this line when doc comments with tests are added

[dependencies]
bytes = "1"
nom = "7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
#tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
# For faster builds on MacOS with incremental building enabled
split-debuginfo = "unpacked"

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
