[package]
name = "lucy"
version = "0.1.0"
edition = "2021"
description = """
Fast and efficient JSON parser and adapter service.
"""
repository = "https://github.com/dark-fusion/lucy"
license = "MIT"

[dependencies]
bytes = "1"
nom = "7"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
# For faster builds on MacOS with incremental building enabled
split-debuginfo = "unpacked"

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
